Changed carets on buttons to have a margin bottom to align correctly with the button in ff/chrome.

--- a/less/button-groups.less
+++ b/less/button-groups.less
@@ -134,8 +134,7 @@
 
 // Reposition the caret
 .btn .caret {
-  margin-top: 7px;
-  margin-left: 0;
+  margin-top: 7px 0px;
 }
 .btn:hover .caret,
 .open.btn-group .caret {
@@ -143,13 +142,13 @@
 }
 // Carets in other button sizes
 .btn-mini .caret {
-  margin-top: 5px;
+  margin: 5px 0px;
 }
 .btn-small .caret {
-  margin-top: 6px;
+  margin: 6px 0px;
 }
 .btn-large .caret {
-  margin-top: 6px;
+  margin: 6px 0px;
   border-left:  5px solid transparent;
   border-right: 5px solid transparent;
   border-top:   5px solid @black;
